--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "frontend_url": "http://localhost:4200",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\sqlexpress;Database=MoviesAPI;Integrated Security=True;"
   }
 }
